update search tool and home page

--- a/src/components/pages/Gyms/gyms.css
+++ b/src/components/pages/Gyms/gyms.css
@@ -1,15 +1,28 @@
+.gym-section-search{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
 .gym-search{
     height: 30px;
     background-color: white;
     border: 3px solid #febb02;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     border-radius: 5px;
     position: absolute;
-    bottom: -25px;
-    width: 80%;
+    width: 35%;
     max-width: 1024px;
+}
+
+.gym-search-button{
+    width: 30px;
+    height: 30px;
+    margin-left: 37%;
 }
 
 .list-gyms{
