--- a/src/components/pages/InfoSign/signup.css
+++ b/src/components/pages/InfoSign/signup.css
@@ -3,14 +3,14 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 100vh;
+    height: 150vh;
     background-color: rgb(18, 0, 60);
 }
 
 .signup-container-1{
     text-align: center;
-    width: 600px;
-    height: 600px;
+    width: 45%;
+    height: 70%;
     background-color: #fff;
     border-radius: 10px;
 }
