--- a/src/components/pages/InfoSign/login.css
+++ b/src/components/pages/InfoSign/login.css
@@ -45,13 +45,13 @@
 }
 
 .login-bodymain-1{
-    height: 300px;
+    height: 70vh;
     align-items: center;
 }
 
-.login-form-1{
-    height: 50px;
-    width: 300px;
+.login-form-1>input{
+    height: 7vh;
+    width: 20vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,13 +62,14 @@
     margin: 10px;
 }
 
-.login-form-1>input{
+.login-form-1>input:focus{
     border-style: none;
+    background-color: lightblue;
 }
 
 .login-button-google-1{
-    height: 50px;
-    width: 300px;
+    height: 7vh;
+    width: 20vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -97,8 +98,8 @@
 }
 
 .login-button-form-1{
-    height: 50px;
-    width: 300px;
+    height: 7vh;
+    width: 20vw;
     display: flex;
     justify-content: center;
     align-items: center;
