--- a/src/components/pages/InfoSign/signup.css
+++ b/src/components/pages/InfoSign/signup.css
@@ -1,117 +1,122 @@
-.signup-wrapper-1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 150vh;
-    background-color: rgb(18, 0, 60);
+.signup-wrapper-1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(18, 0, 60);
 }
 
-.signup-container-1{
-    text-align: center;
-    width: 45%;
-    height: 70%;
-    background-color: #fff;
-    border-radius: 10px;
+.signup-container-1 {
+  text-align: center;
+  width: 500px;
+  max-width: 100%;
+  height: max-content;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
-.signup-header-1{
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.signup-header-1 {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.logo-gymfitness{
-    width: 100px;
-    height: 60px;
-    margin-top: 20px;
-    border-radius: 5px;
+.logo-gymfitness {
+  width: 100px;
+  height: 60px;
+  margin-top: 20px;
+  border-radius: 5px;
 }
 
-.signup-welcome-1{
-    margin-top: 20px;
-    font-weight: bold;
-    font-size: 24px;
+.signup-welcome-1 {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 24px;
 }
 
-.signup-body-1{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
+.signup-body-1 {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 8px auto;
 }
 
-.signup-bodymain-1{
-    height: 70vh;
-    align-items: center;
+.signup-bodymain-1 {
+  height: 70vh;
+  align-items: center;
 }
 
-.signup-form-1>input{
-    height: 7vh;
-    width: 20vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 48px;
-    border: 2px solid gray;
-    text-align: center;
-    cursor: pointer;
-    margin: 10px;
+.signup-form-1 > input {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 48px;
+  border: 2px solid gray;
+  text-align: center;
+  cursor: pointer;
+  margin: 10px;
 }
 
-.signup-form-1>input:focus{
-    background-color: lightblue;
+.signup-form-1 > input:focus {
+  background-color: lightblue;
 }
 
-.signup-button-google-1{
-    height: 7vh;
-    width: 20vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 48px;
-    border: 2px solid gray;
-    text-align: center;
-    cursor: pointer;
-    margin: 10px;
+.signup-button-google-1 {
+  height: 7vh;
+  width: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 48px;
+  border: 2px solid gray;
+  text-align: center;
+  cursor: pointer;
+  margin: 10px;
 }
 
-.signup-cutting-1>span{
-    font-size: 16px;
-    color: gray;
-    margin-top: 20px;
+.signup-cutting-1 > span {
+  font-size: 16px;
+  color: gray;
+  margin-top: 20px;
 }
 
-.signup-google-image{
-    height: 25px;
-    width: 25px;
-    margin: 5px;
+.signup-google-image {
+  height: 25px;
+  width: 25px;
+  margin: 5px;
 }
 
-.signup-google-title{
-    font-size: 16px;
-    margin: 5px;
+.signup-google-title {
+  font-size: 16px;
+  margin: 5px;
 }
 
-.signup-button-form-1{
-    height: 7vh;
-    width: 20vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 48px;
-    border: 2px solid rgb(195, 248, 248);
-    text-align: center;
-    cursor: pointer;
-    margin: 10px;
-    background-color: rgb(195, 248, 248);
+.signup-button-form-1 {
+  height: fit-content;
+  width: 215.2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 48px;
+  border: 2px solid rgb(225, 253, 253);
+  text-align: center;
+  cursor: pointer;
+  margin: 10px;
+  background-color: rgb(225, 253, 253);
 }
 
-.login-now{
-    color: orange;
-    font-weight: 500;
-    cursor: pointer;
+.signup-button-form-1:hover {
+  opacity: 0.5;
+}
+
+.login-now {
+  color: orange;
+  font-weight: 500;
+  cursor: pointer;
 }
