--- a/src/components/pages/InfoSign/login.css
+++ b/src/components/pages/InfoSign/login.css
@@ -5,7 +5,7 @@
   width: 100vw;
   max-width: 100%;
   height: 100vh;
-  background-color: rgb(18, 0, 60);
+  background-color: rgb(0, 0, 0);
 }
 
 .login-container-1 {
@@ -13,8 +13,9 @@
   width: 500px;
   max-width: 100%;
   height: fit-content;
-  background-color: rgba(255, 255, 255, 0.991);
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
+  margin: auto 10px;
 }
 
 .login-header-1 {
@@ -47,7 +48,7 @@
 }
 
 .login-bodymain-1 {
-  height: 70vh;
+  height: fit-content;
   align-items: center;
 }
 
