--- a/src/components/pages/InfoSign/signup.css
+++ b/src/components/pages/InfoSign/signup.css
@@ -3,17 +3,19 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
-  background-color: rgb(18, 0, 60);
+  height: 120vh;
+  max-width: 100%;
+  background-color: rgb(0, 0, 0);
 }
 
 .signup-container-1 {
   text-align: center;
   width: 500px;
   max-width: 100%;
-  height: max-content;
-  background-color: #fff;
+  height: fit-content;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
+  margin: auto 10px;
 }
 
 .signup-header-1 {
@@ -46,11 +48,23 @@
 }
 
 .signup-bodymain-1 {
-  height: 70vh;
+  height: fit-content;
   align-items: center;
 }
 
-.signup-form-1 > input {
+.signup-form-1 {
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-fill-in {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-fill-in > input {
   height: fit-content;
   width: fit-content;
   display: flex;
@@ -62,9 +76,16 @@
   cursor: pointer;
   margin: 10px;
 }
-
-.signup-form-1 > input:focus {
+.form-fill-in > input:focus {
   background-color: lightblue;
+}
+
+.form-notification {
+  background-color: rgba(27, 25, 25, 0.8);
+  border-radius: 10px;
+  color: white;
+  width: 215.2px;
+  margin: auto 10px;
 }
 
 .signup-button-google-1 {
@@ -119,4 +140,5 @@
   color: orange;
   font-weight: 500;
   cursor: pointer;
+  margin-bottom: 25px;
 }
