--- a/src/components/pages/Gyms/gyms.css
+++ b/src/components/pages/Gyms/gyms.css
@@ -1,124 +1,168 @@
-.gym-section-search{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    margin-left: 10px;
-    margin-bottom: 20px;
+.gym-section-search {
+  height: 60px;
+  background-color: white;
+  border: 3px solid #febb02;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 5px;
+  position: relative;
+  width: 70%;
+  max-width: 1024px;
 }
 
-.gym-search{
-    height: 30px;
-    background-color: white;
-    border: 3px solid #febb02;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 5px;
-    position: absolute;
-    width: 35%;
-    max-width: 1024px;
+.gym-search {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-left: 10px;
+  width: 40%;
+  max-width: 100%;
 }
 
-.gym-search-button{
-    width: 30px;
-    height: 30px;
-    margin-left: 37%;
+.gym-search-input {
+  width: 60%;
+  max-width: fit-content;
+  border: none;
+  outline: none;
 }
 
-.list-gyms{
-    border: 1px solid lightgray;
-    padding: 10px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 20px;
+.search-text {
+  cursor: pointer;
 }
 
-.lgs-img{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
+.options {
+  position: absolute;
+  top: 50px;
+  background-color: white;
+  color: gray;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  z-index: 1000;
 }
 
-.lgs-desc{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex: 2;
+.option-item {
+  width: 200px;
+  justify-content: space-around;
+  display: flex;
+  margin: 10px;
 }
 
-.lgs-title{
-    font-size: 20px;
-    color: #0071c2;
+.option-counter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  color: black;
 }
 
-.lgs-subtitle{
-    font-size: 14px;
-    font-weight: bold;
+.option-input {
+  max-width: 150px;
+  width: 80%;
+  margin: 0 auto;
 }
 
-.lgs-feature{
-    font-size: 14px;
+.gym-search-button {
+  width: 30px;
+  height: 30px;
+  margin-left: 10%;
 }
 
-.lgs-address{
-    font-size: 14px;
-    font-weight: bold;
+.list-gyms {
+  border: 1px solid lightgray;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
-.lgs-cancel-opt{
-    font-size: 14px;
-    color: #008009;
-    font-weight: bold;
+.lgs-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
-.lgs-cancel-opt-subt{
-    font-size: 14px;
-    color: #008009;
+.lgs-desc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex: 2;
 }
 
-.lgs-detail{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.lgs-title {
+  font-size: 20px;
+  color: #0071c2;
 }
 
-.lgs-rating{
-    display: flex;
-    justify-content: space-between;
+.lgs-subtitle {
+  font-size: 14px;
+  font-weight: bold;
 }
 
-.lgs-rating>span{
-    font-weight: 500;
+.lgs-feature {
+  font-size: 14px;
 }
 
-.lgs-rating>button{
-    background-color: #003580;
-    color: antiquewhite;
-    padding: 5px;
-    font-weight: bold;
-    border: none;
+.lgs-address {
+  font-size: 14px;
+  font-weight: bold;
 }
 
-.lgs-detail-text{
-    text-align: right;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.lgs-cancel-opt {
+  font-size: 14px;
+  color: #008009;
+  font-weight: bold;
 }
 
-.lgs-price{
-    font-size: 24px;
+.lgs-cancel-opt-subt {
+  font-size: 14px;
+  color: #008009;
 }
 
-.lgs-check-button{
-    background-color: #0071c2;
-    color: antiquewhite;
-    font-weight: bold;
-    padding: 10px 5px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+.lgs-detail {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.lgs-rating {
+  display: flex;
+  justify-content: space-between;
+}
+
+.lgs-rating > span {
+  font-weight: 500;
+}
+
+.lgs-rating > button {
+  background-color: #003580;
+  color: antiquewhite;
+  padding: 5px;
+  font-weight: bold;
+  border: none;
+}
+
+.lgs-detail-text {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.lgs-price {
+  font-size: 24px;
+}
+
+.lgs-check-button {
+  background-color: #0071c2;
+  color: antiquewhite;
+  font-weight: bold;
+  padding: 10px 5px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
