--- a/src/components/pages/InfoSign/login.css
+++ b/src/components/pages/InfoSign/login.css
@@ -5,7 +5,7 @@
   width: 100vw;
   max-width: 100%;
   height: 100vh;
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(45deg, #e66465, #9198e5 60%);
 }
 
 .login-container-1 {
