--- a/src/components/pages/InfoSign/signup.css
+++ b/src/components/pages/InfoSign/signup.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 120vh;
   max-width: 100%;
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(45deg, #e66465, #9198e5 60%);
 }
 
 .signup-container-1 {
