--- a/src/components/pages/Trainers/trainerDetail.css
+++ b/src/components/pages/Trainers/trainerDetail.css
@@ -1,134 +1,134 @@
-.trainer-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
+.trainer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
 }
 
-.trainer-wrapper{
-    width: 100%;
-    max-width: 1024px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
+.trainer-wrapper {
+  width: 100%;
+  max-width: 1084px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
 }
 
-.trainer-title{
-    font-size: 24px;
+.trainer-title {
+  font-size: 36px;
+  font-weight: bold;
 }
 
-.trainer-address{
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.trainer-address {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.trainer-price-highlight{
-    color: #008009;
-    font-weight: 500;
+.trainer-price-highlight {
+  color: #008009;
+  font-weight: 500;
 }
 
-.trainer-images{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.trainer-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.trainer-img-wrapper{
-    width: 33%;
+.trainer-img-wrapper {
+  width: 33%;
 }
 
-.trainer-img{
-    width: 100%;
-    object-fit: cover;
+.trainer-img {
+  width: 100%;
+  object-fit: cover;
 }
 
-.trainer-details{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 20px;
+.trainer-details {
+  display: inline-block;
+  gap: 20px;
+  margin-top: 20px;
+  background-color: #ebf3ff;
+  padding: 20px;
+  max-width: 500px;
 }
 
-.trainer-details-texts{
-    flex:3;
+.trainer-desc {
+  font-size: 20px;
+  margin: 20px auto;
 }
 
-.trainer-desc{
-    font-size: 16px;
-    margin-top: 20px;
+.trainer-details-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
-.trainer-details-price{
-    flex: 1;
-    background-color: #ebf3ff;
-    padding: 20px;
-    display: flex;flex-direction: column;
-    gap: 20px;
+.trainer-details-price > h1 {
+  font-size: 20px;
+  color: #555;
 }
 
-.trainer-details-price>h1{
-    font-size: 18px;
-    color: #555;
+.trainer-details-price > span {
+  font-size: 18px;
 }
 
-.trainer-details-price>span{
-    font-size: 14px;
+.trainer-details-price > h2 {
+  font-weight: 300;
 }
 
-.trainer-details-price>h2{
-    font-weight: 300;
+.trainer-details-price > button {
+  border: none;
+  padding: 10px 20px;
+  background-color: #0071c2;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  max-width: 50%;
 }
 
-.trainer-details-price>button{
-    border: none;
-    padding: 10px 20px;
-    background-color: #0071c2;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
+.slider {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.426);
+  z-index: 999;
+  display: flex;
+  align-items: center;
 }
 
-.slider{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.426);
-    z-index: 999;
-    display: flex;
-    align-items: center;
+.slider-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.slider-wrapper{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.slider-img {
+  width: 70%;
+  height: 100%;
 }
 
-.slider-img{
-    width: 70%;
-    height: 100%;
+.close {
+  position: absolute;
+  top: 20px;
+  right: 100px;
+  font-size: 30px;
+  color: lightgray;
+  cursor: pointer;
 }
 
-.close{
-    position: absolute;
-    top: 20px;
-    right: 100px;
-    font-size: 30px;
-    color: lightgray;
-    cursor: pointer;
-}
-
-.arrow{
-    margin: 100px;
-    font-size: 50px;
-    color: lightgray;
-    cursor: pointer;
+.arrow {
+  margin: 100px;
+  font-size: 50px;
+  color: lightgray;
+  cursor: pointer;
 }
