--- a/src/components/pages/Trainers/trainerDetail.css
+++ b/src/components/pages/Trainers/trainerDetail.css
@@ -7,7 +7,7 @@
 
 .trainer-wrapper {
   width: 100%;
-  max-width: 1084px;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -15,7 +15,7 @@
 }
 
 .trainer-title {
-  font-size: 36px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -29,6 +29,7 @@
 .trainer-price-highlight {
   color: #008009;
   font-weight: 500;
+  text-align: center;
 }
 
 .trainer-images {
@@ -49,15 +50,10 @@
 .trainer-details {
   display: inline-block;
   gap: 20px;
-  margin-top: 20px;
+  margin: 10px auto;
   background-color: #ebf3ff;
   padding: 20px;
   max-width: 500px;
-}
-
-.trainer-desc {
-  font-size: 20px;
-  margin: 20px auto;
 }
 
 .trainer-details-price {
@@ -68,17 +64,12 @@
   gap: 20px;
 }
 
-.trainer-details-price > h1 {
-  font-size: 20px;
-  color: #555;
-}
-
-.trainer-details-price > span {
-  font-size: 18px;
-}
-
-.trainer-details-price > h2 {
-  font-weight: 300;
+.trainer-details-texts {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .trainer-details-price > button {
